trunk (unreleased)
==================

- Define wtool inside the prefs_workflow_policy_mapping template.
  [hannosch]

- Copied safeEditProperty from CMFPlone.migration_util to avoid a dependency.
  [hannosch]


1.4.0 (2008-11-05)
==================

- Port evolutions from the 1.3 maintenance branch (old style product).
  [encolpe]

- Fixed bad version in metadata.xml (again)
  [encolpe]

- Removed Favorite content type.
  [hannosch]

- Fixed "ValueError: 'acquisition' is not a workflow ID" in
  prefs_workflow_policy_mapping.  Fix prepared by jhackel.  Fixes
  http://dev.plone.org/plone/ticket/8101
  [maurits]


1.3.2 (2008-06-30)
==================

- Fixed bad metadata.xml.
  [encolpe]

- Fixed incorrect variable name in exception message.
  [davisagli]